--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
+@use 'themes' as *;
+
+@use '@nebular/theme/styles/globals' as *;
+
+@include nb-install() {
+  @include nb-theme-global();
+};
 /* You can add global styles to this file, and also import other style files */
+@import url("../node_modules/primeng/resources/themes/md-dark-indigo/theme.css");
+@import url("../node_modules/primeng/resources/primeng.min.css");
+@import url("../node_modules/primeicons/primeicons.css");
+
