--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,12 @@
 @import url("../node_modules/primeng/resources/primeng.min.css");
 @import url("../node_modules/primeicons/primeicons.css");
 
+html,
+body{
+  
+  height:100vh!important;
+  width:100%!important;  
+  text-align: center!important;
+  font-family: "ABCWhyte Book", "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu",
+    "Cantarell", "Helvetica Neue", sans-serif !important;
+}
