--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,33 @@
-<app-navbar></app-navbar>
+<style>
+  #pageDiv {
+    /* Pint the below path to another image to change the background */
+    /* background-image: url('../assets/img/okta_blue_bg.png'); */
+    /* background-image: url('assets/img/nobeyama-v2.jpg'); */
 
-<router-outlet></router-outlet>
+    /* min-height: 1000vh !important;
+    min-width: 100% !important;
+    width: auto !important;
+    height: auto !important; */
+    /* Below for Parallax effect */
+    /* background-attachment: fixed !important;
+    background-position: center !important;
+    background-repeat: no-repeat !important;
+    background-size:100%!important; */
+    filter: blur(100) !important;
+
+    background: url('assets/img/nobeyama-v2.jpg') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    min-width: 100% !important;
+    min-height: 100% !important;
+
+  }
+</style>
+<div id="pageDiv">
+  <div id="mainContainer">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+  </div>
+</div>
