--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,11 @@
 #pageDiv{
   text-align: center!important;
   color: #FFFFFF!important; 
+
 }
 
 #mainContainer{  
+  text-align: center!important;
   padding-top: 60px!important; 
+  
 }
