--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,11 +22,14 @@
     background-size: cover;
     min-width: 100% !important;
     min-height: 100% !important;
+    
 
   }
 </style>
+
 <div id="pageDiv">
-  <div id="mainContainer">
+  <app-toolbar></app-toolbar>
+  <div id="mainContainer" >
     <app-navbar></app-navbar>
     <router-outlet></router-outlet>
   </div>
