--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,4 +1,115 @@
 .landingMainContainer{
-  border-style: dotted!important;
+  
   // height:900px!important;
+}
+
+.subContainer{
+  // border-style: dotted!important;
+  width:40%!important;
+  margin: 10px!important;
+}
+
+
+.auth-container {
+  -webkit-backdrop-filter: blur(100px) !important;
+  backdrop-filter: blur(100px) !important;
+  background: transparent !important;
+  border-top: 2px solid black!important;
+  border-left: 2px solid black!important;
+  border-right: 1px solid black!important;
+}
+
+#okta-sign-in.auth-container .okta-form-label {
+  text-align: center !important;
+}
+
+.auth-container,
+.main-container,
+.no-beacon {
+  background: transparent !important;
+  color: #ffffff !important;
+}
+
+.okta-form-title,
+.o-form-head {
+  color: #ffffff !important;
+}
+
+.okta-form-label,
+.o-form-label {
+  color: #ffffff !important;
+}
+
+#okta-sign-in .sign-in-with-device-option .separation-line:before {
+  border-top: none !important;
+}
+
+#okta-sign-in {
+  .separation-line {
+    background: transparent !important;
+    font-size: 13px;
+  }
+  .separation-line span {
+    color: #ffffff !important;
+    background: transparent !important;
+  }
+}
+
+#okta-sign-in .siw-main-footer .auth-footer .link {
+  color: #ffffff !important;
+}
+
+.okta-form-infobox-error,
+.infobox,
+.infobox-error {
+  color: red !important;
+}
+
+#okta-sign-in .auth-header {
+  border: none !important;
+}
+
+#okta-sign-in {
+  /* border-style: solid; */
+  border-width: 0px !important;
+  height: auto;
+  margin: 0px !important;
+}
+
+#okta-sign-in.auth-container .button-primary {
+  color: #fff;
+  background-color: #2ABC57 !important;
+  border-color: lightgreen!important;
+  
+}
+
+#okta-sign-in.auth-container .button {
+  background-color: #2ABC57 !important;
+  background: #2ABC57 !important;
+  border-color: lightgreen!important;
+  color: #FFFFFF!important;
+}
+
+#okta-sign-in.auth-container h3 {
+  color: #ffffff !important;
+}
+
+#okta-sign-in.auth-container .okta-form-subtitle {
+  color: #ffffff !important;
+}
+#okta-sign-in .auth-org-logo {
+  border-radius: 5px !important;
+}
+
+#okta-sign-in.auth-container .mfa-okta-verify, .mfa-okta-password {
+  display:none!important;
+
+}
+
+.subContainer{
+  text-align: center!important;
+}
+
+.smallLandingDiv{
+  margin-top: 50px!important;
 }
