--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,4 +1,5 @@
 <ng-template #bigScreen>
+  <div class="userName">{{strFullName}}</div>
   <!-- <div class="startMainDiv" fxLayout="columns wrap" fxLayoutAlign="center center"> -->
   <div class="startMainDiv" fxLayout="columns wrap" fxLayoutAlign="center">
     <!-- <div class="startSubContainer" fxLayout="columns wrap" fxLayoutAlign="center">   
