--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,3 +19,14 @@ body{
   font-family: "ABCWhyte Book", "-apple-system", "BlinkMacSystemFont", "Segoe UI", "Roboto", "Oxygen-Sans", "Ubuntu",
     "Cantarell", "Helvetica Neue", sans-serif !important;
 }
+
+.userName {
+  text-align: end !important;
+  color: #ffffff !important;
+  margin-right: 5% !important;
+  margin-top: 2% !important;
+  position: fixed !important;
+  top: 0 !important;
+  right: 0;
+  width: 90vw;
+}
