--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -1,5 +1,12 @@
 <ng-template #bigScreen>
   <div class="userName">{{strFullName}}</div>
+
+  <div class="bookmarkMainDiv" fxLayout="columns wrap" fxLayoutAlign="center center">
+
+
+  </div>
+
+
 </ng-template>
 <!-- ************************* SMALL SCREEN ************************* -->
 <!-- ************************* SMALL SCREEN ************************* -->
@@ -9,3 +16,23 @@
 
 <p>bookmarks works!</p>
 
+
+
+
+<p-toast position="bottom-center"></p-toast>
+<p-toast position="top-left" key="tl"></p-toast>
+<p-toast position="top-center" key="tc"></p-toast>
+<p-toast position="bottom-center" key="bc"></p-toast>
+
+<p-toast position="bottom-center" key="c" (onClose)="onReject()" [baseZIndex]="5000">
+    <ng-template let-message pTemplate="message">
+        <div class="p-flex p-flex-column" style="flex: 1">
+            <div class="p-text-center">
+                <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+                <h4>{{message.summary}}</h4>
+                <p>{{message.detail}}</p>
+            </div>
+            
+        </div>
+    </ng-template>
+</p-toast>
