--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,45 @@
-@use 'themes' as *;
 
-@use '@nebular/theme/styles/globals' as *;
+// // Custom Theming for Angular Material
+// // For more information: https://material.angular.io/guide/theming
+// @use '@angular/material' as mat;
+// // Plus imports for other components in your app.
 
-@include nb-install() {
-  @include nb-theme-global();
-};
+// // Include the common styles for Angular Material. We include this here so that you only
+// // have to load a single css file for Angular Material in your app.
+// // Be sure that you only ever include this mixin once!
+// @include mat.core();
+
+// // Define the palettes for your theme using the Material Design palettes available in palette.scss
+// // (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// // hue. Available color palettes: https://material.io/design/color/
+// $bookmark-app-v1-primary: mat.define-palette(mat.$indigo-palette);
+// $bookmark-app-v1-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+
+// // The warn palette is optional (defaults to red).
+// $bookmark-app-v1-warn: mat.define-palette(mat.$red-palette);
+
+// // Create the theme object. A theme consists of configurations for individual
+// // theming systems such as "color" or "typography".
+// $bookmark-app-v1-theme: mat.define-light-theme((
+//   color: (
+//     primary: $bookmark-app-v1-primary,
+//     accent: $bookmark-app-v1-accent,
+//     warn: $bookmark-app-v1-warn,
+//   )
+// ));
+
+// // Include theme styles for core and each component used in your app.
+// // Alternatively, you can import and @include the theme mixins for each component
+// // that you are using.
+// @include mat.all-component-themes($bookmark-app-v1-theme);
+
+// // @use 'themes' as *;
+
+// // @use '@nebular/theme/styles/globals' as *;
+
+// // @include nb-install() {
+// //   @include nb-theme-global();
+// // };
 /* You can add global styles to this file, and also import other style files */
 @import url("../node_modules/primeng/resources/themes/md-dark-indigo/theme.css");
 @import url("../node_modules/primeng/resources/primeng.min.css");
@@ -30,3 +65,5 @@ body{
   right: 0;
   width: 90vw;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
