--- a/src/themes.scss
+++ b/src/themes.scss
@@ -1,24 +1,24 @@
-@forward '@nebular/theme/styles/theming';
-@use '@nebular/theme/styles/theming' as *;
-@use '@nebular/theme/styles/themes/dark';
+// @forward '@nebular/theme/styles/theming';
+// @use '@nebular/theme/styles/theming' as *;
+// @use '@nebular/theme/styles/themes/dark';
 
-$nb-themes: nb-register-theme((
+// $nb-themes: nb-register-theme((
 
-  // add your variables here like:
+//   // add your variables here like:
 
-  // color-primary-100: #f2f6ff,
-  // color-primary-200: #d9e4ff,
-  // color-primary-300: #a6c1ff,
-  // color-primary-400: #598bff,
-  // color-primary-500: #3366ff,
-  // color-primary-600: #274bdb,
-  // color-primary-700: #1a34b8,
-  // color-primary-800: #102694,
-  // color-primary-900: #091c7a,
+//   // color-primary-100: #f2f6ff,
+//   // color-primary-200: #d9e4ff,
+//   // color-primary-300: #a6c1ff,
+//   // color-primary-400: #598bff,
+//   // color-primary-500: #3366ff,
+//   // color-primary-600: #274bdb,
+//   // color-primary-700: #1a34b8,
+//   // color-primary-800: #102694,
+//   // color-primary-900: #091c7a,
 
-), dark, dark);
+// ), dark, dark);
 
 
-@import url("../node_modules/primeng/resources/themes/md-dark-indigo/theme.css");
-@import url("../node_modules/primeng/resources/primeng.min.css");
-@import url("../node_modules/primeicons/primeicons.css");
+// @import url("../node_modules/primeng/resources/themes/md-dark-indigo/theme.css");
+// @import url("../node_modules/primeng/resources/primeng.min.css");
+// @import url("../node_modules/primeicons/primeicons.css");
