--- a/src/app/bookmarks/bookmarks.component.html
+++ b/src/app/bookmarks/bookmarks.component.html
@@ -8,37 +8,60 @@
 
             <!-- <div class="tableDiv"> -->
             <div class="card">
-                <p-table styleClass="p-datatable-striped" [value]="myBookmarkList" [scrollable]="true" scrollHeight="600px" scrollDirection="both" id="bookmarkTable" #bookmarkTable >
-                    <ng-template pTemplate="header" >
+                <p-table styleClass="p-datatable-striped" [value]="myBookmarkList" [scrollable]="true"
+                    scrollHeight="600px" scrollDirection="both" id="bookmarkTable" #bookmarkTable>
+                    <ng-template pTemplate="header">
                         <tr>
-                            <th style="width:15vw;font-size: 14px;" [ngStyle]="{background:'var(--pink-600)'}" pSortableColumn="description">Description <p-sortIcon field="description"></p-sortIcon></th>
+                            <th style="width:15vw;font-size: 14px;" [ngStyle]="{background:'var(--pink-600)'}"
+                                pSortableColumn="description">Description <p-sortIcon field="description"></p-sortIcon>
+                            </th>
 
-                            <th style="width:15vw;font-size: 14px;" [ngStyle]="{background:'var(--pink-600)'}" pSortableColumn="category">Category <p-sortIcon field="category"></p-sortIcon></th>
+                            <th style="width:15vw;font-size: 14px;" [ngStyle]="{background:'var(--pink-600)'}"
+                                pSortableColumn="category">Category <p-sortIcon field="category"></p-sortIcon>
+                            </th>
 
-                            <th style="width:100%;font-size: 14px;" [ngStyle]="{background:'var(--pink-600)'}" pSortableColumn="siteURL">URL  <p-sortIcon field="category"></p-sortIcon></th>
+                            <th style="width:100%;font-size: 14px;" [ngStyle]="{background:'var(--pink-600)'}"
+                                pSortableColumn="siteURL">URL <p-sortIcon field="category"></p-sortIcon>
+                            </th>
 
                         </tr>
 
                         <tr>
-                            <th style="width:15vw;font-size: 14px;color:black;padding-left:10px;" [ngStyle]="{background:'var(--pink-600)'}">
-                                <input pInputText type="text" (input)="bookmarkTable.filter($event.target.value, 'description', 'contains')" [value]="bookmarkTable.filters['description']?.value" placeholder="Search by description" class="p-column-filter">
+                            <th style="width:15vw;font-size: 14px;color:black;padding-left:10px;"
+                                [ngStyle]="{background:'var(--pink-600)'}">
+                                <input pInputText type="text"
+                                    (input)="bookmarkTable.filter($event.target.value, 'description', 'contains')"
+                                    [value]="bookmarkTable.filters['description']?.value"
+                                    placeholder="Search by description" class="p-column-filter">
                             </th>
-                            <th style="width:15vw;font-size: 14px;color:black;padding-left:10px;" [ngStyle]="{background:'var(--pink-600)'}">
-                                <input pInputText type="text" (input)="bookmarkTable.filter($event.target.value, 'category', 'contains')" [value]="bookmarkTable.filters['category']?.value" placeholder="Search by category" class="p-column-filter">
+                            <th style="width:15vw;font-size: 14px;color:black;padding-left:10px;"
+                                [ngStyle]="{background:'var(--pink-600)'}">
+                                <input pInputText type="text"
+                                    (input)="bookmarkTable.filter($event.target.value, 'category', 'contains')"
+                                    [value]="bookmarkTable.filters['category']?.value" placeholder="Search by category"
+                                    class="p-column-filter">
                             </th>
-                            <th style="width:50vw;font-size: 14px;color:black;padding-left:10px;" [ngStyle]="{background:'var(--pink-600)'}">
-                                <input pInputText type="text" (input)="dt1.filter($event.target.value, 'category', 'contains')" [value]="bookmarkTable.filters['category']?.value" placeholder="Search by category" class="p-column-filter">
+                            <th style="width:50vw;font-size: 14px;color:black;padding-left:10px;"
+                                [ngStyle]="{background:'var(--pink-600)'}">
+                                <input pInputText type="text"
+                                    (input)="dt1.filter($event.target.value, 'category', 'contains')"
+                                    [value]="bookmarkTable.filters['category']?.value" placeholder="Search by category"
+                                    class="p-column-filter">
                             </th>
-                          
+
                         </tr>
 
                     </ng-template>
                     <ng-template pTemplate="body" let-myBookmarkList>
                         <tr>
 
-                            <td style="width:15vw; border-color: grey;font-size: 12px; margin-left:10px;padding:5px">{{myBookmarkList.description}}</td>
-                            <td style="width:15vw; border-color: grey;font-size: 12px; margin-left:10px;padding:5px">{{myBookmarkList.category}}</td>
-                            <td style="width:50vw; border-color: grey;word-break:break-all;font-size: 12px; margin-left:10px;padding:5px"><a href="{{myBookmarkList.siteURL}}" target="_blank">{{myBookmarkList.siteURL}}</a>
+                            <td style="width:15vw; border-color: grey;font-size: 12px; margin-left:5px;padding:5px">
+                                {{myBookmarkList.description}}</td>
+                            <td style="width:15vw; border-color: grey;font-size: 12px; margin-left:5px;padding:5px">
+                                {{myBookmarkList.category}}</td>
+                            <td
+                                style="width:50vw; border-color: grey;word-break:break-all;font-size: 12px; margin-left:5px;padding:5px">
+                                <a href="{{myBookmarkList.siteURL}}" target="_blank">{{myBookmarkList.siteURL}}</a>
                             </td>
 
                         </tr>
@@ -59,88 +82,88 @@
         </div>
     </ng-template>
 
+    <p-toast position="top-right"></p-toast>
+    <p-toast position="top-left" key="tl"></p-toast>
+    <p-toast position="top-center" key="tc"></p-toast>
+    <p-toast position="bottom-center" key="bc"></p-toast>
+
+    <p-toast position="top-right" key="c" (onClose)="onReject()" [baseZIndex]="5000">
+        <ng-template let-message pTemplate="message">
+            <div class="p-flex p-flex-column" style="flex: 1">
+                <div class="p-text-center">
+                    <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+                    <h4>{{message.summary}}</h4>
+                    <p>{{message.detail}}</p>
+                </div>
+
+            </div>
+        </ng-template>
+    </p-toast>
+
+
+
 </ng-template>
 <!-- ************************* SMALL SCREEN ************************* -->
 <!-- ************************* SMALL SCREEN ************************* -->
 
 <ng-template [ngIf]="smallScreen" [ngIfElse]="bigScreen">
 
-    <div *ngIf="dataLoad; else notShow">
-        <p>bookmarks works!</p>
+    <div *ngIf="dataLoad; else notShow" class="smallScreenBookmarks">
+        <div class="card">
+            <p-table styleClass="p-datatable-striped" [value]="myBookmarkList" [scrollable]="true" scrollHeight="800px"
+                scrollDirection="both" id="smbookmarkTable" >
+                <ng-template pTemplate="header" class="smHead">
+                    <tr>
+                        <th style="width:30vw;font-size: 12px; " [ngStyle]="{background:'var(--pink-600)'}"
+                            pSortableColumn="description">Description <p-sortIcon field="description">
+                            </p-sortIcon>
+                        </th>
+
+                        <th style="width:100%;font-size: 12px; " [ngStyle]="{background:'var(--pink-600)'}"
+                            pSortableColumn="siteURL">URL <p-sortIcon field="category"></p-sortIcon>
+                        </th>
+
+                    </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-myBookmarkList>
+                    <tr>
+                        <td style="width:30vw; border-color: grey;font-size: 10px; margin-left:5px;padding:5px">
+                            {{myBookmarkList.description}}</td>
+                        <td
+                            style="width:65vw; border-color: grey;word-break:break-all;font-size: 10px; margin-left:5px;padding:5px">
+                            <a href="{{myBookmarkList.siteURL}}" target="_blank">{{myBookmarkList.siteURL}}</a>
+                        </td>
+
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
     </div>
 
     <ng-template #notShow>
-        <div class="p-field p-col-12 p-md-6">
+        <div class="p-field p-col-12 p-md-6 smSpinner">
             <p-progressSpinner [style]="{width: '200px', height: '200px'}" styleClass="custom-spinner" strokeWidth="8"
                 animationDuration=".5s"></p-progressSpinner>
 
         </div>
     </ng-template>
 
-</ng-template>
+    <p-toast position="bottom-center"></p-toast>
+    <p-toast position="top-left" key="tl"></p-toast>
+    <p-toast position="top-center" key="tc"></p-toast>
+    <p-toast position="bottom-center" key="bc"></p-toast>
 
+    <p-toast position="top-right" key="c" (onClose)="onReject()" [baseZIndex]="5000">
+        <ng-template let-message pTemplate="message">
+            <div class="p-flex p-flex-column" style="flex: 1">
+                <div class="p-text-center">
+                    <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+                    <h4>{{message.summary}}</h4>
+                    <p>{{message.detail}}</p>
+                </div>
 
-
-
-
-
-
-
-
-
-<p-toast position="bottom-center"></p-toast>
-<p-toast position="top-left" key="tl"></p-toast>
-<p-toast position="top-center" key="tc"></p-toast>
-<p-toast position="bottom-center" key="bc"></p-toast>
-
-<p-toast position="bottom-center" key="c" (onClose)="onReject()" [baseZIndex]="5000">
-    <ng-template let-message pTemplate="message">
-        <div class="p-flex p-flex-column" style="flex: 1">
-            <div class="p-text-center">
-                <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
-                <h4>{{message.summary}}</h4>
-                <p>{{message.detail}}</p>
             </div>
+        </ng-template>
+    </p-toast>
 
-        </div>
-    </ng-template>
-</p-toast>
-
-
-
-<!-- <p-table [value]="myBookmarkList" responsiveLayout="scroll" rowHover="true"  [scrollable]="true" scrollHeight="60vh" >
-    <ng-template pTemplate="header" class="bookmarkTable">
-        <tr> -->
-<!-- <th [ngStyle]="{backgroundColor:'var(--pink-600)'}" pSortableColumn="description"
-                style="font-size:14px;padding:10px; margin:5px" style="width:200px">Description <p-sortIcon
-                    field="description"></p-sortIcon>
-            </th> -->
-<!-- 
-
-            <th [ngStyle]="{backgroundColor:'var(--pink-600)'}" 
-            style="font-size:14px;padding:10px; margin:5px" style="width:200px">Description </th>
-
-            <th [ngStyle]="{backgroundColor:'var(--pink-600)'}"
-                style="font-size:14px;padding:10px; margin:5px">Category</th>
-
-            <th [ngStyle]="{backgroundColor:'var(--pink-600)'}"
-                style="font-size:14px;padding:10px; margin:5px">URL</th>
-
-        </tr>
-    </ng-template>
-    <ng-template pTemplate="body" let-myBookmarkList>
-        <tr [pSelectableRow]="myBookmarkList" [pSelectableRowIndex]="rowIndex" class="bookmarkTable" >
-
-            <td style="font-size:14px;padding:10px; margin:5px;line-height: 1" style="width:200px">
-                {{myBookmarkList.description}}</td>
-            <td style="font-size:12px;padding:10px; margin:5px;line-height: 1">
-                {{myBookmarkList.category}}</td>
-            <td style="font-size:12px;padding:10px; margin:5px;line-height: 1"  style="word-wrap: break-word"><a
-                    href="{{myBookmarkList.siteURL}}" target="_blank">{{myBookmarkList.siteURL}}</a>
-            </td>
-
-
-
-        </tr>
-    </ng-template>
-</p-table> -->
+</ng-template>
