--- a/src/app/shared/save-bookmark/save-bookmark.component.scss
+++ b/src/app/shared/save-bookmark/save-bookmark.component.scss
@@ -1,10 +1,40 @@
-.saveDialogDiv{
-  width:100%!important;
-  text-align: center!important;;
+.saveDialogDiv {
+  width: 100% !important;
+  text-align: center !important;
+  background-color: var(--gray-900);
+  border-radius: 4px !important;
+  color: #ffffff !important;
 }
 
-.saveDialoglogoImg{
-  width:200px!important;
-  border-radius: 5px!important;
-  // box-shadow: 3px 9px 10px -2px black !important;
+.saveDialoglogoImg {
+  width: 200px !important;
+  border-radius: 5px !important;
+}
+.mat-dialog-container {
+  display: block;
+  padding: 20px !important;
+  background-color: var(--gray-900);
+}
+
+.smSaveBookMarkDiv {
+  width: 100% !important;
+  height: auto !important;
+  text-align: center !important;
+  align-items: center !important;
+  display: block !important;
+}
+
+.catProgress {
+  margin-top: 20px !important;
+}
+
+.saveBookmarkSpacer {
+  margin-top: 15px !important;
+  margin-bottom: 15px !important;
+}
+
+#catDropdown {
+  .p-dropdown {
+    width: 211px !important;
+  }
 }
