--- a/src/app/shared/save-bookmark/save-bookmark.component.html
+++ b/src/app/shared/save-bookmark/save-bookmark.component.html
@@ -1,5 +1,131 @@
 <div class="saveDialogDiv">
   <img src="assets/img/logo-full.png" class="saveDialoglogoImg">
-</div>
-<h5>Right Icon</h5>
+  <p-divider></p-divider>
 
+  <ng-template #bigScreen>
+    <div *ngIf="catDownload; else notShow">
+
+      <p-panel header="Select Category">
+        <p-dropdown [options]="arrCat" [(ngModel)]="selectedCat" placeholder="Select a Category" optionLabel="category"
+          [showClear]="true" id="catDropdown"></p-dropdown>
+      </p-panel>
+      <p-divider></p-divider>
+
+      <div class="bookmarkInfoMain">
+        <div class="bookmarkInfo">
+          <p-panel header="Bookmark Information">
+            <p style="text-align: left;margin-left:20px">Description</p>
+            <span class="p-input-icon-right">
+              <i class="pi pi-spin pi-star"></i>
+              <input type="text" pInputText [(ngModel)]="bookmarkDesc" id="bookmarkDesc" style="width:450px" />
+            </span>
+
+
+            <p style="text-align: left;margin-left:20px;margin-top: 15px;">URL</p>
+            <span class="p-input-icon-right">
+              <i class="pi pi-bookmark"></i>
+              <input type="text" pInputText [(ngModel)]="strBookmarkUri" id="strBookmarkUri" style="width:450px" />
+            </span>
+
+          </p-panel>
+        </div>
+
+      </div>
+      <p-divider></p-divider>
+      <div>
+        <p-button label="Submit" icon="pi pi-check" iconPos="right" (onClick)="uploadBookmark()"></p-button>
+      </div>
+
+    </div>
+
+    <ng-template #notShow>
+      <div class="p-field p-col-12 p-md-6 catProgress">
+        <p-progressBar mode="indeterminate" [style]="{'height': '30px'}"></p-progressBar>
+      </div>
+    </ng-template>
+
+    <p-toast position="top-right"></p-toast>
+    <p-toast position="top-left" key="tl"></p-toast>
+    <p-toast position="top-center" key="tc"></p-toast>
+    <p-toast position="bottom-center" key="bc"></p-toast>
+
+    <p-toast position="top-right" key="c" (onClose)="onReject()" [baseZIndex]="5000">
+      <ng-template let-message pTemplate="message">
+        <div class="p-flex p-flex-column" style="flex: 1">
+          <div class="p-text-center">
+            <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+            <h4>{{message.summary}}</h4>
+            <p>{{message.detail}}</p>
+          </div>
+
+        </div>
+      </ng-template>
+    </p-toast>
+
+  </ng-template>
+</div>
+
+<!-- ************************* SMALL SCREEN ************************* -->
+<!-- ************************* SMALL SCREEN ************************* -->
+
+<ng-template [ngIf]="smallScreen" [ngIfElse]="bigScreen">
+  <div class="smSaveBookMarkDiv" fxLayout="columns wrap" fxLayoutAlign="center start">
+
+    <div *ngIf="catDownload; else notShow">
+      <p-panel header="Select Category">
+        <p-dropdown [options]="arrCat" [(ngModel)]="selectedCat" placeholder="Select a Category" optionLabel="category"
+          [showClear]="true" id="catDropdown"></p-dropdown>
+      </p-panel>
+      <p-divider></p-divider>
+
+      <div class="bookmarkInfoMain">
+        <div class="bookmarkInfo">
+          <p-panel header="Bookmark Information">
+            <p style="text-align: left;margin-left:5px">Description</p>
+
+            <span class="p-input-icon-right">
+              <i class="pi pi-spin pi-star"></i>
+              <input type="text" pInputText [(ngModel)]="bookmarkDesc" id="bookmarkDesc" style="width:250px" />
+            </span>
+
+            <span class="p-input-icon-right">
+              <i class="pi pi-bookmark"></i>
+              <p style="text-align: left;margin-left:5px;margin-top: 15px;">URL</p>
+              <input type="text" pInputText [(ngModel)]="strBookmarkUri" id="strBookmarkUri" style="width:250px" />
+            </span>
+
+          </p-panel>
+        </div>
+
+      </div>
+
+      <p-divider></p-divider>
+      <div>
+        <p-button label="Submit" icon="pi pi-check" iconPos="right" (onClick)="uploadBookmark()"></p-button>
+      </div>
+    </div>
+    <ng-template #notShow>
+      <div class="p-field p-col-12 p-md-6 catProgress">
+        <p-progressBar mode="indeterminate" [style]="{'height': '30px'}"></p-progressBar>
+      </div>
+    </ng-template>
+  </div>
+
+  <p-toast position="bottom-center"></p-toast>
+  <p-toast position="top-left" key="tl"></p-toast>
+  <p-toast position="top-center" key="tc"></p-toast>
+  <p-toast position="bottom-center" key="bc"></p-toast>
+
+  <p-toast position="bottom-center" key="c" (onClose)="onReject()" [baseZIndex]="5000">
+    <ng-template let-message pTemplate="message">
+      <div class="p-flex p-flex-column" style="flex: 1">
+        <div class="p-text-center">
+          <i class="pi pi-exclamation-triangle" style="font-size: 3rem"></i>
+          <h4>{{message.summary}}</h4>
+          <p>{{message.detail}}</p>
+        </div>
+
+      </div>
+    </ng-template>
+  </p-toast>
+</ng-template>
